Revised text cells

--- a/tf_cvae_mixed.ipynb
+++ b/tf_cvae_mixed.ipynb
@@ -6,15 +6,14 @@
     "colab": {
       "name": "tf_cvae_mixed.ipynb",
       "provenance": [],
-      "private_outputs": true,
       "collapsed_sections": [],
       "toc_visible": true,
       "machine_shape": "hm",
       "include_colab_link": true
     },
     "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
+      "name": "python3",
+      "display_name": "Python 3"
     }
   },
   "cells": [
@@ -69,7 +68,7 @@
         "id": "xfNT-mlFwxVM"
       },
       "source": [
-        "# Categorical Variational Autoencoder"
+        "# Mixed COntinuous/Categorical Variational Autoencoder"
       ]
     },
     {
@@ -161,8 +160,8 @@
         "colab_type": "text"
       },
       "source": [
-        "# Generating syntetic categorical dataset\n",
-        "Importing a categorical dataset"
+        "# Uploading mixed continuous/categorical dataset\n",
+        "Preparing dataset"
       ]
     },
     {
@@ -173,37 +172,37 @@
         "colab": {}
       },
       "source": [
-        "dtypes = {'age':np.float32,\n",
-        "'sex':'category',\n",
-        "'on thyroxine':'category',\n",
-        "'query on thyroxine':'category',\n",
-        "'on antithyroid medication':'category',\n",
-        "'sick':'category',\n",
-        "'pregnant':'category',\n",
-        "'thyroid surgery':'category',\n",
-        "'I131 treatment':'category',\n",
-        "'query hypothyroid':'category',\n",
-        "'query hyperthyroid':'category',\n",
-        "'lithium':'category',\n",
-        "'goitre':'category',\n",
-        "'tumor':'category',\n",
-        "'hypopituitary':'category',\n",
-        "'psych':'category',\n",
-        "'TSH measured':'category',\n",
-        "'TSH':np.float32,\n",
-        "'T3 measured':'category',\n",
-        "'T3':np.float32,\n",
-        "'TT4 measured':'category',\n",
-        "'TT4':np.float32,\n",
-        "'T4U measured':'category',\n",
-        "'T4U':np.float32,\n",
-        "'FTI measured':'category',\n",
-        "'FTI':np.float32,\n",
-        "'TBG measured':'category',\n",
-        "'TBG':np.float32,\n",
-        "'target':str,\n",
-        "'target1':str\n",
-        "}"
+        "columns = ['age',\n",
+        "  'sex',\n",
+        "  'on thyroxine',\n",
+        "  'query on thyroxine',\n",
+        "  'on antithyroid medication',\n",
+        "  'sick',\n",
+        "  'pregnant',\n",
+        "  'thyroid surgery',\n",
+        "  'I131 treatment',\n",
+        "  'query hypothyroid',\n",
+        "  'query hyperthyroid',\n",
+        "  'lithium',\n",
+        "  'goitre',\n",
+        "  'tumor',\n",
+        "  'hypopituitary',\n",
+        "  'psych',\n",
+        "  'TSH measured',\n",
+        "  'TSH',\n",
+        "  'T3 measured',\n",
+        "  'T3',\n",
+        "  'TT4 measured',\n",
+        "  'TT4',\n",
+        "  'T4U measured',\n",
+        "  'T4U',\n",
+        "  'FTI measured',\n",
+        "  'FTI',\n",
+        "  'TBG measured',\n",
+        "  'TBG',\n",
+        "  'target',\n",
+        "  'target1'\n",
+        "]"
       ],
       "execution_count": 0,
       "outputs": []
@@ -222,7 +221,7 @@
         "                   pd.read_csv('http://archive.ics.uci.edu/ml/machine-learning-databases/thyroid-disease/allhypo.data',header=None,index_col=None),\n",
         "                   pd.read_csv('http://archive.ics.uci.edu/ml/machine-learning-databases/thyroid-disease/allrep.data',header=None,index_col=None)\n",
         "                  ])\n",
-        "data_in.columns=dtypes.keys()\n",
+        "data_in.columns=columns\n",
         "index = data_in['TSH measured'] != 'f'\n",
         "index = np.logical_and(index,data_in['T3 measured'] != 'f')\n",
         "index = np.logical_and(index,data_in['TT4 measured'] != 'f')\n",
@@ -234,7 +233,7 @@
         "data_in = data_in[np.logical_not(np.asarray(data_in=='?').any(axis=1))]\n",
         "data_in = data_in[np.logical_not(np.asarray(data_in[['age']]=='F').any(axis=1))]\n",
         "data_in = data_in.loc[['F' not in i for i in data_in['age']]]\n",
-        "data_in = data_in[np.logical_not(data_in.isna().any(axis=1))]"
+        "data_in = data_in[np.logical_not(data_in.isna().any(axis=1))]\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -278,6 +277,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "L2pxTkS3tw23",
+        "colab_type": "text"
+      },
+      "source": [
+        "### one hot encoding of categorical variables"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "PIeNzhkgHUZ9",
@@ -286,11 +295,20 @@
       },
       "source": [
         "data_in = data_in.sample(frac=1)\n",
-        "data_dummy = pd.get_dummies(data_in)  # One-hot-encoding\n",
-        "data_dummy.sample(5)"
+        "data_dummy = pd.get_dummies(data_in)  # One-hot-encoding"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UqK0gS7FsJjN",
+        "colab_type": "text"
+      },
+      "source": [
+        "### scaling floating point variables"
+      ]
     },
     {
       "cell_type": "code",
@@ -301,11 +319,20 @@
       },
       "source": [
         "from sklearn.preprocessing import StandardScaler\n",
-        "data_dummy[['age','TSH','T3','TT4','T4U','FTI']] = StandardScaler().fit_transform(data_dummy[['age','TSH','T3','TT4','T4U','FTI']])\n",
-        "data_dummy.sample(5)"
+        "data_dummy[['age','TSH','T3','TT4','T4U','FTI']] = StandardScaler().fit_transform(data_dummy[['age','TSH','T3','TT4','T4U','FTI']])"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3N_NVTa2t3lO",
+        "colab_type": "text"
+      },
+      "source": [
+        "### list containing groups baounday and variables types"
+      ]
     },
     {
       "cell_type": "code",
@@ -339,9 +366,7 @@
         "colab": {}
       },
       "source": [
-        "data_dim = np.sum([i[0] for i in split_list])\n",
-        "print(data_dim)\n",
-        "print(split_list)"
+        "data_dim = np.sum([i[0] for i in split_list])"
       ],
       "execution_count": 0,
       "outputs": []
@@ -354,60 +379,10 @@
         "colab": {}
       },
       "source": [
-        "data_dummy = data_dummy.loc[:,data_dummy.columns[:data_dim]]\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "zEIlnFB-6bkI",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
+        "data_dummy = data_dummy.loc[:,data_dummy.columns[:data_dim]]\n",
         "data_dummy=np.asarray(data_dummy)\n",
-        "data_dummy.shape"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "c_ryQx3zGkOV",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "plt.imshow(np.cov(data_dummy,rowvar=False))"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "5MLxWuPPf7th",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
         "train_data = data_dummy[:7000,:]\n",
-        "test_data  = data_dummy[7000:,:]"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "bsFGgdfH3K5E",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
+        "test_data  = data_dummy[7000:,:]\n",
         "train_data = train_data.reshape(train_data.shape[0], train_data.shape[1]).astype('float32')\n",
         "test_data = test_data.reshape(test_data.shape[0], test_data.shape[1]).astype('float32')"
       ],
@@ -437,7 +412,7 @@
         "id": "PIGN6ouoQxt3"
       },
       "source": [
-        "[link text](https://)## Use *tf.data* to create batches and shuffle the dataset"
+        "## Use *tf.data* to create batches and shuffle the dataset"
       ]
     },
     {
@@ -463,7 +438,7 @@
       "source": [
         "## Wire up the generative and inference network with *tf.keras.Sequential*\n",
         "\n",
-        "In our VAE example, we use two small ConvNets for the generative and inference network. Since these neural nets are small, we use `tf.keras.Sequential` to simplify our code. Let $x$ and $z$ denote the observation and latent variable respectively in the following descriptions.\n",
+        "In our VAE example, we use two fully connected networks for the generative and inference network. Since these neural nets are small, we use `tf.keras.Sequential` to simplify our code. Let $x$ and $z$ denote the observation and latent variable respectively in the following descriptions.\n",
         "\n",
         "### Generative Network\n",
         "This defines the generative model which takes a latent encoding as input, and outputs the parameters for a conditional distribution of the observation, i.e. $p(x|z)$. Additionally, we use a unit Gaussian prior $p(z)$ for the latent variable.\n",
@@ -475,7 +450,7 @@
         "During optimization, we can sample from $q(z|x)$ by first sampling from a unit Gaussian, and then multiplying by the standard deviation and adding the mean. This ensures the gradients could pass through the sample to the inference network parameters.\n",
         "\n",
         "### Network architecture\n",
-        "For the inference network, we use two convolutional layers followed by a fully-connected layer. In the generative network, we mirror this architecture by using a fully-connected layer followed by three convolution transpose layers (a.k.a. deconvolutional layers in some contexts). Note, it's common practice to avoid using batch normalization when training VAEs, since the additional stochasticity due to using mini-batches may aggravate instability on top of the stochasticity from sampling."
+        "For the inference network, we use fully-connected layers. In the generative network, we mirror this architecture by using a fully-connected layers. Note, it's common practice to avoid using batch normalization when training VAEs, since the additional stochasticity due to using mini-batches may aggravate instability on top of the stochasticity from sampling."
       ]
     },
     {
@@ -612,19 +587,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-7YLh6B5sHRd",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "len(model.trainable_variables)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
@@ -750,11 +712,11 @@
         "  #print(predictions)\n",
         "  fig = plt.figure(figsize=[10,10])\n",
         "  plt.subplot(2, 2, 1)\n",
-        "  plt.bar(range(train_data.shape[1]),np.mean(train_data,axis=0))\n",
+        "  plt.bar(range(train_data.shape[1]),np.mean(train_data,axis=0),color='k')\n",
         "  plt.xlim([0,train_data.shape[1]])\n",
         "  plt.title('data: average')\n",
         "  plt.subplot(2, 2, 2)\n",
-        "  plt.bar(range(predictions.shape[1]),np.mean(predictions,axis=0))\n",
+        "  plt.bar(range(predictions.shape[1]),np.mean(predictions,axis=0),color='k')\n",
         "  plt.xlim([0,predictions.shape[1]])\n",
         "  plt.title('generated: average')\n",
         "  plt.subplot(2, 2, 3)\n",
@@ -767,7 +729,7 @@
         "  plt.xlim([0,predictions.shape[1]])\n",
         "  plt.ylim([predictions.shape[1],0])\n",
         "  plt.title('generated: covariance')\n",
-        "\n",
+        "  plt.savefig('corr.png',dpi=300)\n",
         "  plt.show()"
       ],
       "execution_count": 0,
@@ -805,6 +767,18 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Oev7Yu9IrSq_",
+        "colab_type": "text"
+      },
+      "source": [
+        "# checking original vs synthetic data distribution using PCA and t-SNE\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "p9VNMLoJr8f2",
@@ -840,19 +814,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gtLHlekGcv0K",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "np.concatenate([X_embedded,gen_data]).shape"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "taAj5hUoZXuX",
         "colab_type": "code",
         "colab": {}
@@ -874,13 +835,14 @@
       },
       "source": [
         "plt.figure(figsize=[10,7])\n",
-        "plt.scatter(X_out[:num_examples_to_generate,0],X_out[:num_examples_to_generate,1],c='#E0884B',label='Original data',alpha=0.5)\n",
-        "plt.scatter(X_out[num_examples_to_generate:,0],X_out[num_examples_to_generate:,1],c='#0080F1',label='Synthetic data',alpha=0.5)\n",
+        "plt.scatter(X_out[:num_examples_to_generate,0],X_out[:num_examples_to_generate,1],c='#E0884B',label='Original data',alpha=0.7)\n",
+        "plt.scatter(X_out[num_examples_to_generate:,0],X_out[num_examples_to_generate:,1],c='#0080F1',label='Synthetic data',alpha=0.7)\n",
         "plt.xticks([])\n",
         "plt.yticks([])\n",
         "plt.xlabel('t-SNE dim 1')\n",
         "plt.ylabel('t-SNE dim 2')\n",
-        "plt.legend()"
+        "plt.legend()\n",
+        "plt.savefig('t-sne.png',dpi=300)"
       ],
       "execution_count": 0,
       "outputs": []
